WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
299245
[GFC] Inserting items within the grid which fit should not resize the grid
https://bugs.webkit.org/show_bug.cgi?id=299245
Summary
[GFC] Inserting items within the grid which fit should not resize the grid
Sammy Gill
Reported
2025-09-20 10:31:44 PDT
If we insert a grid item, which is explicitly placed and which fits within the explicit grid, we currently increase the number of columns. The columns in this case should stay the same size the item fits within the grid
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-09-20 10:31:54 PDT
<
rdar://problem/161011615
>
Sammy Gill
Comment 2
2025-09-20 10:42:46 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/51072
EWS
Comment 3
2025-09-22 08:20:21 PDT
Committed
300322@main
(63f8ee0d10fd): <
https://commits.webkit.org/300322@main
> Reviewed commits have been landed. Closing PR #51072 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug